# What_kgllm

./: .gitignore  LLMprompt.md  README.md  analyze_hk_central_relations.py  analyze_kg_data.py  config.toml  config_template.toml  data_processor.py  fix_llm_config.py  generate-graph.py  install_dependencies.py  kg_generation_plan.py  monitor_kg_progress.py  monitor_progress.py  policy_comparative_analyzer.py  policy_evolution_analyzer.py  policy_kg_batch_generator.py  policy_kg_generator.py  pyproject.toml  requirements.txt
data/: industrial-revolution-kb.html  input-data.txt  knowledge_graph.html
data/pa/: pa1997.xml  pa1998.xml  pa1999.xml  pa2000.xml  pa2001.xml  pa2003.xml  pa2017.xml  pa2018.xml  pa2019.xml  pa2020.xml  pa2021.xml  pa2022.xml  pa2023.xml  pa2024.xml
policy_data/: processing_log.json
policy_data/kg_json/: policy_kg_2003.json  policy_kg_2004.json  policy_kg_2005.json  policy_kg_2006.json  policy_kg_2007.json  policy_kg_2008.json  policy_kg_2009.json  policy_kg_2010.json  policy_kg_2011.json  policy_kg_2013.json  policy_kg_2014.json  policy_kg_2015.json  policy_kg_2024.json
policy_data/metadata/: batch_generation_20250610_105630.json
policy_data/raw_texts/: policy_address_1997.txt  policy_address_1998.txt  policy_address_1999.txt  policy_address_2000.txt  policy_address_2001.txt  policy_address_2003.txt  policy_address_2004.txt  policy_address_2005.txt  policy_address_2006.txt  policy_address_2007.txt  policy_address_2008.txt  policy_address_2009.txt  (+14 more)
src/: policy_analysis.py  simple_graph.py  test_graph.py  test_tech.py
(+8 files in other folders)
